src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Enrollment_Percentage_rPwDs__c</fullName>
        <inlineHelpText>Updated by Sales Ops. If you see a problem, please contact SalesOps@livongo.com</inlineHelpText>
        <label>Enrollment Percentage (rPwDs)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Enrollment_Percentage_rPwDs_c__c</fullName>
        <label>Enrollment_Percentage_rPwDs__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Enrollment_Percentage_rPwHs__c</fullName>
        <inlineHelpText>Updated by Sales Ops. If you see a problem, please contact SalesOps@livongo.com</inlineHelpText>
        <label>Enrollment Percentage (rPwHs)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Estimated_Diabetes__c</fullName>
        <formula>Covered_Lives__c  * 0.06</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Diabetes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exclude_from_Inside_Sales_Lead_Gen__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if you would like to exclude this prospect account from inside sales / lead generation activities. Maximum exclusion is 25 prospect accounts.</inlineHelpText>
        <label>Exclude from Inside Sales / Lead Gen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exit_Interview_Doc_URL__c</fullName>
        <description>Part of JENGA:1539
CSMs can add a link to an Exit Interview document for clients that make the (poor) decision to term Livongo.</description>
        <label>Exit Interview Doc URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Expected_Client_Tier__c</fullName>
        <formula>IF( RecordType.DeveloperName = &quot;Downmarket Client&quot;, &quot;Downmarket Client&quot;,
IF( NumberOfEmployees &gt;9999, &quot;Tier 1&quot;,
IF( NumberOfEmployees &gt;2499, &quot;Tier 2&quot;,		
	&quot;Tier 3&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Client Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Months</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fortune_1000_Rank__c</fullName>
        <label>Fortune 1000 Rank</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fortune_100__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This organization is a Fortune 100 Company (by employee size)</description>
        <label>Fortune 100</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fortune_500__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a Fortune 500 organization by employee size</description>
        <label>Fortune 500</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fully_Insured_Population__c</fullName>
        <label>Fully Insured Population</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Global_Employees__c</fullName>
        <label>Global Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Google_Slides_Strategic_Plan_URL__c</fullName>
        <label>Account Review URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>HSS_Account_Executive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HSS Account Executive</label>
        <referenceTo>User</referenceTo>
        <relationshipName>HSS_AccountExecutive_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Historic_notes_if_not_in_Salesforce__c</fullName>
        <description>A place where CI/CS can link to historic Account notes if not migrated to Salesforce</description>
        <inlineHelpText>Link to historic Account notes here (if not migrated to Salesforce)</inlineHelpText>
        <label>Historic notes (if not in Salesforce)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Ignore_all_CSM_mirroring_effects__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ask your System Admin to check/uncheck this box.</description>
        <inlineHelpText>Ask your System Admin to check/uncheck this box.</inlineHelpText>
        <label>Ignore all CSM mirroring effects</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Impending_Client_Termination_Date__c</fullName>
        <inlineHelpText>Only select a date for this field if a client has informed us they intend to terminate their agreement</inlineHelpText>
        <label>Impending Client Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Incentives_Content_Guides_SPA__c</fullName>
        <label>Incentives: Content Guides - SPA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incentives_Gift_Cards_SPA__c</fullName>
        <label>Incentives: Gift Cards - SPA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incentives_Goods_and_Services_SPA__c</fullName>
        <label>Incentives: Goods and Services - SPA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Energy</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Transportation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_this_account_a_Strategic_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if this account is a strategic account. VP of Strategic Accounts to own outreach, strategy, etc...</description>
        <inlineHelpText>Check this box if this account is a strategic account. VP of Strategic Accounts to own outreach, strategy, etc...</inlineHelpText>
        <label>Is this account a Strategic Account?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__CustomerInfo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Info</label>
        <referenceTo>JBCXM__CustomerInfo__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>JBCXM_Account_CustInfo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company/Account</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Activity_by_Livongo_Rep__c</fullName>
        <description>Created by Rollup Helper</description>
        <label>Last Activity by Livongo Rep</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Event_by_Livongo_Rep__c</fullName>
        <description>Created by Rollup Helper</description>
        <label>Last Event by Livongo Rep</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Task_Event_by_Livongo_Rep__c</fullName>
        <formula>IF(
    AND(
        ISBLANK(Last_Event_by_Livongo_Rep__c),
        ISBLANK(Last_Activity_by_Livongo_Rep__c)
       ),
    NULL,
    DATE(1900, 01, 01) +
    MAX(
        BLANKVALUE(
            Last_Event_by_Livongo_Rep__c, 
            DATE(1900, 01, 01)
        ) - DATE(1900, 01, 01),
        BLANKVALUE(
            Last_Activity_by_Livongo_Rep__c ,
            DATE(1900, 01, 01)
        ) - DATE(1900, 01, 01)
    )
)</formula>
        <label>Last Task/Event by Livongo Rep</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Updated_ECS_DateTime__c</fullName>
        <label>Last Updated ECS DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Updated_ECS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Last Updated Enrollment Communication Survey</description>
        <inlineHelpText>Last Updated Enrollment Communication Survey</inlineHelpText>
        <label>Last Updated ECS</label>
        <referenceTo>Enrollment_Communications_Survey__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Latest_Closed_Won_Opp_Date__c</fullName>
        <label>Latest Closed Won Opp Date</label>
        <summarizedField>Opportunity.CloseDate</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Livongo_Financial_Impact_ROI_Actual__c</fullName>
        <inlineHelpText>Updated by Client Success. If you see a problem, please contact the Account&apos;s CSM.</inlineHelpText>
        <label>Livongo Financial Impact (ROI) - Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location_Size_Accuracy__c</fullName>
        <externalId>true</externalId>
        <label>Location Size Accuracy</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Location_Size_Unit_of_Measure__c</fullName>
        <externalId>true</externalId>
        <label>Location Size Unit of Measure</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Location_Size__c</fullName>
        <label>Location Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marketing_Account_SubType__c</fullName>
        <label>Marketing Account Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Behavioral Health Provider</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Business Development</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Federal Government</fullName>
                </value>
                <value>
                    <fullName>Fully Insured Employer</fullName>
                </value>
                <value>
                    <fullName>Health System</fullName>
                </value>
                <value>
                    <fullName>Labor/Pension Fund</fullName>
                </value>
                <value>
                    <fullName>Managed Care Organization</fullName>
                </value>
                <value>
                    <fullName>Medicare Advantage</fullName>
                </value>
                <value>
                    <fullName>Ops Partner</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Payer</fullName>
                </value>
                <value>
                    <fullName>PBM</fullName>
                </value>
                <value>
                    <fullName>Self Funded Employer</fullName>
                </value>
                <value>
                    <fullName>TPA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Account_Type__c</fullName>
        <description>First/top level layer of account segmentation for channel marketing</description>
        <inlineHelpText>First/top level layer of account segmentation for channel marketing</inlineHelpText>
        <label>Marketing Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Employer</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medicaid_Population__c</fullName>
        <label>Medicaid Population</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Medicare_Advantage__c</fullName>
        <label>Medicare Advantage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Member_NPS__c</fullName>
        <description>Summary of Member-level NPS score</description>
        <inlineHelpText>Updated by Sales Ops. If you see a problem, please contact SalesOps@livongo.com</inlineHelpText>
        <label>Member NPS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Member_recruitment_began__c</fullName>
        <label>Member recruitment began</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Members_Enrolled__c</fullName>
        <label>Participants Enrolled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Migrated_myStrength_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denote the migrated mystrength accounts</description>
        <label>Migrated myStrength Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NAICS_Industry_Classification__c</fullName>
        <label>NAICS Industry Classification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accommodation and Food Services</fullName>
                </value>
                <value>
                    <fullName>Administrative and Support and Waste Management and Remediation Services</fullName>
                </value>
                <value>
                    <fullName>Agriculture, Forestry, Fishing and Hunting</fullName>
                </value>
                <value>
                    <fullName>Arts, Entertainment and Recreation</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Educational Services</fullName>
                </value>
                <value>
                    <fullName>Finance and Insurance</fullName>
                </value>
                <value>
                    <fullName>Health Care and Social Assistance</fullName>
                </value>
                <value>
                    <fullName>Information</fullName>
                </value>
                <value>
                    <fullName>Management of Companies and Enterprises</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Mining</fullName>
                </value>
                <value>
                    <fullName>Other Services (except Public Administration)</fullName>
                </value>
                <value>
                    <fullName>Professional, Scientific and Technical Services</fullName>
                </value>
                <value>
                    <fullName>Public Administration</fullName>
                </value>
                <value>
                    <fullName>Real Estate Rental and Leasing</fullName>
                </value>
                <value>
                    <fullName>Retail Trade</fullName>
                </value>
                <value>
                    <fullName>Transportation and Warehousing</fullName>
                </value>
                <value>
                    <fullName>Truck, Utility Trailer, and RV (Recreational Vehicle) Rental and Leasing</fullName>
                </value>
                <value>
                    <fullName>Unclassified Establishments</fullName>
                </value>
                <value>
                    <fullName>Utilities</fullName>
                </value>
                <value>
                    <fullName>Wholesale Trade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Next_Business_Review__c</fullName>
        <label>Next Business Review</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Number_of_POs__c</fullName>
        <label>Number of POs</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Cross_Sell_Opportunity_Count__c</fullName>
        <label>Open Cross-Sell Opportunity Count</label>
        <summaryFilterItems>
            <field>Opportunity.Type</field>
            <operation>equals</operation>
            <value>Cross-sell (New product)</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Selling, Proposal, VOC, Contracting</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Open_Enrollment_Date__c</fullName>
        <label>Open Enrollment Date</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Open_Enrollment_Period__c</fullName>
        <description>Client Stats</description>
        <label>Open Enrollment Period</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Open_Opportunity_Count__c</fullName>
        <description>The number of open opportunities associated with this account</description>
        <label>Open Opportunity Count</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Selling, Proposal, VOC, Contracting</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Type</field>
            <operation>notEqual</operation>
            <value>Renewal</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Open_Opportunity_PwDs__c</fullName>
        <label>Open Opportunity PwDs</label>
        <summarizedField>Opportunity.Livongo_for_Diabetes_PwDs__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Selling, Proposal, VOC, Contracting</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Type</field>
            <operation>notEqual</operation>
            <value>Renewal</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Open_Renewal_Opportunity_Count__c</fullName>
        <label>Open Renewal Opportunity Count</label>
        <summaryFilterItems>
            <field>Opportunity.Type</field>
            <operation>equals</operation>
            <value>Renewal</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Selling, Proposal, VOC, Contracting</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Overall_Account_Score__c</fullName>
        <label>Overall Account Score</label>
        <summarizedField>Health_Score__c.Score__c</summarizedField>
        <summaryFilterItems>
            <field>Health_Score__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Account Health Score</value>
        </summaryFilterItems>
        <summaryForeignKey>Health_Score__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Overall_DM_Score__c</fullName>
        <label>Overall DM Score</label>
        <summarizedField>Health_Score__c.Score__c</summarizedField>
        <summaryFilterItems>
            <field>Health_Score__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Program Health Score</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Health_Score__c.Program__c</field>
            <operation>equals</operation>
            <value>Diabetes</value>
        </summaryFilterItems>
        <summaryForeignKey>Health_Score__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Overall_HTN_Score__c</fullName>
        <label>Overall HTN Score</label>
        <summarizedField>Health_Score__c.Score__c</summarizedField>
        <summaryFilterItems>
            <field>Health_Score__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Program Health Score</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Health_Score__c.Program__c</field>
            <operation>equals</operation>
            <value>Hypertension</value>
        </summaryFilterItems>
        <summaryForeignKey>Health_Score__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PBM_Partner_Pipeline_Request__c</fullName>
        <inlineHelpText>Enter data into this field if you&apos;d like to engage the partner team to help with this deal, through a pipeline call review, etc.
Format: (Date - Partner Name - Request Details)</inlineHelpText>
        <label>Partner Pipeline Request</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PO_WholePerson__c</fullName>
        <description>If 1, then at least 1 Opportunity has a Whole Person OLI</description>
        <label>PO#_WholePerson</label>
        <summarizedField>Opportunity.PO_WholePerson__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Type</field>
            <operation>notEqual</operation>
            <value>Renewal</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Payer_Lines_of_Business__c</fullName>
        <label>Payer Lines of Business</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACA</fullName>
                </value>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>Fully Insured</fullName>
                </value>
                <value>
                    <fullName>Medicare Advantage</fullName>
                </value>
                <value>
                    <fullName>Medicaid</fullName>
                </value>
                <value>
                    <fullName>Provider Sponsored</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payer_Sales_Cycle__c</fullName>
        <label>Payer Sales Cycle</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not yet engaged</fullName>
                </value>
                <value>
                    <fullName>Initial conversations</fullName>
                </value>
                <value>
                    <fullName>Proposal</fullName>
                </value>
                <value>
                    <fullName>RFP Process</fullName>
                </value>
                <value>
                    <fullName>Contract negotiation</fullName>
                </value>
                <value>
                    <fullName>Contract signed -- Active Partner</fullName>
                </value>
                <value>
                    <fullName>Not interested currently/Declined/Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plan_Year_Start_Month__c</fullName>
        <inlineHelpText>What month does the Client Health Plan year start?</inlineHelpText>
        <label>Plan Year Start Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Power_of_1__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Accts_PO1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_CS_POC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary CS Point of Contact</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Primary CS Point of Contact)</relationshipLabel>
        <relationshipName>Accounts8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prior_Account_Status__c</fullName>
        <description>JENGA-1279</description>
        <label>Prior Account Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prior_Year_Number_of_Employees__c</fullName>
        <label>Prior Year Number of Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior_Year_Revenue__c</fullName>
        <label>Prior Year Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Program_Count2__c</fullName>
        <formula>if(text( Closed_Won_Livongo_For_Diabetes_PwD_Sum__c )&lt;&gt;&quot;0&quot;,1,0)+if(text( PwH_Sold__c )&lt;&gt;&quot;0&quot;,1,0)+if(text( PwWM_DPP_Sold__c )&lt;&gt;&quot;0&quot;,1,0)+if(text( PwWM_Sold__c )&lt;&gt;&quot;0&quot;,1,0)+if(text( PwDPP_Sold__c )&lt;&gt;&quot;0&quot;,1,0)+if(text( PwBH_Sold__c )&lt;&gt;&quot;0&quot;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program_Overview_Count_Term_Exp__c</fullName>
        <inlineHelpText>Program Implementation Status = Terminated, Expired, or Ongoing Delivery Total</inlineHelpText>
        <label>Program Overview Count_Term/Exp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program_Overview_Count_Upcoming__c</fullName>
        <inlineHelpText>Program Implementation Status = Implementation or Contracting</inlineHelpText>
        <label>Program Overview Count_Upcoming</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program_Overview_Count__c</fullName>
        <inlineHelpText>Program Implementation Status = Launched + 90 or On-going Delivery</inlineHelpText>
        <label>Program Overview Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prospect_Update_Next_Steps__c</fullName>
        <label>Prospect Update &amp; Next Steps</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Provider_Sponsored_Population__c</fullName>
        <label>Provider Sponsored Population</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>